--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,32 @@
 /*  your css code here. If applicable */
+.main{
+	height:13em;
+	background-color:lightgrey;
+	border:4px solid black;
+	border-radius:50px;
+	display:flex;
+	justify-content:center;
+	/* text-align:center; */
+	align-items:center;
+}
+.green{
+	width:5rem;
+	height:5rem;
+	background-color:green;
+	border-radius:50%;
+	margin:5px;
+}
+.yellow{
+	width:5rem;
+	height:5rem;
+	background-color:yellow;
+	border-radius:50%;
+	margin:5px;
+}
+.red{
+	width:5rem;
+	height:5rem;
+	background-color:red;
+	border-radius:50%;
+	margin:5px;
+}
